--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(get_params)
 export(harmonize_names_sirius)
 export(harmonize_spectra)
 export(import_spectra)
+export(install_latest_version)
 export(keep_peaks)
 export(load_yaml_files)
 export(log_debug)
