Add missing dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,10 +25,12 @@ Imports:
     gt (>= 0.10.1),
     httr2 (>= 1.0.1),
     igraph (>= 2.0.3),
+    installr (>= 0.23.4),
     jsonlite (>= 1.8.8),
     MsBackendMgf (>= 1.12.0),
     MsBackendMsp (>= 1.8.0),
     msentropy (>= 0.1.4),
+    pak (>= 0.7.2),
     pbapply (>= 1.7.2),
     pingr (>= 2.0.3),
     R.utils (>= 2.12.3),
