--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -75,6 +75,7 @@ Collate:
     'columns_model.R'
     'clean_collapse.R'
     'clean_chemo.R'
+    'cleanup_spectra.R'
     'complement_metadata_structures.R'
     'create_adducts.R'
     'create_components.R'
