--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export(prepare_libraries_sop_merged)
 export(prepare_libraries_spectra)
 export(prepare_params)
 export(prepare_taxa)
+export(read_from_sirius_zip)
 export(remove_above_precursor)
 export(replace_id)
 export(round_reals)
