--- a/inst/params/default/prepare_annotations_spectra.yaml
+++ b/inst/params/default/prepare_annotations_spectra.yaml
@@ -5,9 +5,9 @@ files:
   annotations:
     #' Raw annotations files.
     raw:
-      #' List of spectral matching results.
+      #' List of spectral matching annotations.
       spectral:
-        #' Spectral spectral matching results. STRING
+        #' Spectral spectral matching annotations. STRING
         spectral: data/interim/annotations/example_spectralMatches.tsv.gz
 
     #' List of prepared annotations.
