Add an option to remove ties (fixes #134)

--- a/inst/params/default/weight_annotations.yaml
+++ b/inst/params/default/weight_annotations.yaml
@@ -184,5 +184,8 @@ options:
   #' Do not use it. BOOLEAN
   force: no
 
+  #' Remove ties. BOOLEAN
+  remove_ties: no
+
   #' Summarise results to one row per feature. BOOLEAN
   summarise: no
