--- a/inst/params/prepare_params_advanced.yaml
+++ b/inst/params/prepare_params_advanced.yaml
@@ -640,5 +640,8 @@ options:
   #' Nitrogen rule. BOOLEAN
   nitrogen_rule: yes
 
+  #' Remove ties. BOOLEAN
+  remove_ties: no
+
   #' Summarise results to one row per feature. BOOLEAN
   summarise: no
