--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,8 +73,9 @@ export(replace_id)
 export(round_reals)
 export(sanitize_spectra)
 export(select_annotations_columns)
-export(select_sirius_columns)
-export(select_sirius_columns_2)
+export(select_sirius_columns_canopus)
+export(select_sirius_columns_formulas)
+export(select_sirius_columns_structures)
 export(select_sop_columns)
 export(split_tables_sop)
 export(taxize_spectra_benchmark)
