Deploy shinyapps demo test

--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -38,7 +38,7 @@ jobs:
         with:
           packages: |
             renv
-            posit-dev/shinylive
+            shinylive
             sessioninfo
           cache-version: ${{ github.event.inputs.cache-version }}
 
