--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -55,10 +55,10 @@ jobs:
         with:
           path: "site"
 
-      - name: Deploy to GitHub pages 🚀
-        if: github.event_name != 'pull_request'
-        uses: JamesIves/github-pages-deploy-action@v4.5.0
-        with:
-          clean: false
-          branch: gh-pages
-          folder: site
+      # - name: Deploy to GitHub pages 🚀
+      #   if: github.event_name != 'pull_request'
+      #   uses: JamesIves/github-pages-deploy-action@v4.5.0
+      #   with:
+      #     clean: false
+      #     branch: gh-pages
+      #     folder: site
