--- a/inst/params/default/prepare_libraries_spectra.yaml
+++ b/inst/params/default/prepare_libraries_spectra.yaml
@@ -44,6 +44,9 @@ files:
 names:
   #' Name of fields present in the MGF.
   mgf:
+    #' Name of "adduct" in MGF. STRING
+    adduct: ~
+
     #' Name of "collision energy" in MGF. STRING
     collision_energy: ~
 
