Refactoring MS1 adducts (#141, #144)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -71,6 +71,8 @@ Collate:
     'import_spectra.R'
     'annotate_spectra.R'
     'calculate_entropy.R'
+    'parse_adduct.R'
+    'calculate_mass_from_adduct.R'
     'clean_bio.R'
     'columns_model.R'
     'clean_collapse.R'
@@ -126,7 +128,6 @@ Collate:
     'prepare_features_components.R'
     'prepare_features_edges.R'
     'prepare_features_tables.R'
-    'prepare_libraries_adducts.R'
     'prepare_libraries_rt.R'
     'select_sop_columns.R'
     'prepare_libraries_sop_closed.R'
