--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(annotate_masses)
 export(annotate_spectra)
 export(calculate_entropy)
+export(calculate_mass_from_adduct)
 export(clean_bio)
 export(clean_chemo)
 export(clean_collapse)
@@ -47,6 +48,7 @@ export(load_yaml_files)
 export(log_debug)
 export(log_pipe)
 export(normalize_peaks)
+export(parse_adduct)
 export(parse_cli_params)
 export(parse_yaml_params)
 export(parse_yaml_paths)
@@ -57,7 +59,6 @@ export(prepare_annotations_spectra)
 export(prepare_features_components)
 export(prepare_features_edges)
 export(prepare_features_tables)
-export(prepare_libraries_adducts)
 export(prepare_libraries_rt)
 export(prepare_libraries_sop_closed)
 export(prepare_libraries_sop_ecmdb)
