Improve install_latest_version.R

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Imports:
     igraph (>= 2.0.3),
     installr (>= 0.23.4),
     jsonlite (>= 1.8.8),
+    MetaboCoreUtils (>= 1.12.0),
     MsBackendMgf (>= 1.12.0),
     MsBackendMsp (>= 1.8.0),
     msentropy (>= 0.1.4),
@@ -34,6 +35,7 @@ Imports:
     pbapply (>= 1.7.2),
     pingr (>= 2.0.3),
     R.utils (>= 2.12.3),
+    remotes (>= 2.5.0),
     rotl (>= 3.1.0),
     shiny (>= 1.8.1.1),
     shinybusy (>= 0.3.3),
