--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -25,9 +25,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Get number of CPU cores
+        uses: SimenB/github-actions-cpu-cores@v2
+        id: cpu-cores
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
+          Ncpus: ${{ steps.cpu-cores.outputs.count }}
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages:  |
