--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -42,20 +42,12 @@ jobs:
           needs: coverage
       - name: Test coverage
         run: |
-          cov <- covr::package_coverage(
+          covr::codecov(
             quiet = FALSE,
             clean = FALSE,
-            install_path = file.path(normalizePath(Sys.getenv("RUNNER_TEMP"), winslash = "/"), "package")
+            install_path = file.path(Sys.getenv("RUNNER_TEMP"), "package")
           )
-          covr::to_cobertura(cov)
         shell: Rscript {0}
-      - uses: codecov/codecov-action@v4.5.0
-        with:
-          fail_ci_if_error: ${{ github.event_name != 'pull_request' && true || false }}
-          file: ./cobertura.xml
-          plugin: noop
-          disable_search: true
-          token: ${{ secrets.CODECOV_TOKEN }}
       - name: Show testthat output
         if: always()
         run: |
