--- a/inst/params/prepare_params_advanced.yaml
+++ b/inst/params/prepare_params_advanced.yaml
@@ -174,22 +174,25 @@ files:
       exp:
         #' List of negative experimental spectral libraries. STRING
         neg:
-          - data/interim/libraries/spectra/exp/massbank_neg.rds
+          - data/interim/libraries/spectra/exp/spectra_exp_neg.rds
 
         #' List of positive experimental spectral libraries. STRING
         pos:
-          - data/interim/libraries/spectra/exp/massbank_pos.rds
+          - data/interim/libraries/spectra/exp/spectra_exp_pos.rds
 
         #' List of raw experimental spectral libraries. STRING
-        raw: data/source/libraries/spectra/exp/spectral_lib_mini_with_rt.mgf
+        raw: 
+          - data/source/libraries/spectra/exp/spectral_lib_mini_with_rt.mgf
 
       #' In silico libraries
       is:
         #' List of negative in silico spectral libraries. STRING
-        neg: data/interim/libraries/spectra/is/lotus_neg.rds
+        neg: 
+          - data/interim/libraries/spectra/is/lotus_neg.rds
 
         #' List of positive in silico spectral libraries. STRING
-        pos: data/interim/libraries/spectra/is/lotus_pos.rds
+        pos: 
+          - data/interim/libraries/spectra/is/lotus_pos.rds
 
         #' List of raw in silico spectral libraries. STRING
         raw:
