--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,6 @@ export(fake_hmdb)
 export(fake_lotus)
 export(fake_sop_columns)
 export(filter_annotations)
-export(filter_nitrogen_rule)
 export(get_example_sirius)
 export(get_file)
 export(get_gnps_tables)
@@ -39,6 +38,7 @@ export(get_last_version_from_zenodo)
 export(get_massbank_spectra)
 export(get_organism_taxonomy_ott)
 export(get_params)
+export(harmonize_adducts)
 export(harmonize_names_sirius)
 export(harmonize_spectra)
 export(import_spectra)
