--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,3 +82,118 @@ export(split_tables_sop)
 export(weight_annotations)
 export(weight_bio)
 export(weight_chemo)
+importFrom(MetaboCoreUtils,calculateMass)
+importFrom(MsBackendMgf,readMgfSplit)
+importFrom(MsBackendMsp,readMsp)
+importFrom(Spectra,Spectra)
+importFrom(Spectra,addProcessing)
+importFrom(Spectra,applyProcessing)
+importFrom(Spectra,combineSpectra)
+importFrom(Spectra,concatenateSpectra)
+importFrom(Spectra,dropNaSpectraVariables)
+importFrom(Spectra,filterEmptySpectra)
+importFrom(Spectra,filterFourierTransformArtefacts)
+importFrom(Spectra,filterIntensity)
+importFrom(Spectra,filterPrecursorCharge)
+importFrom(Spectra,peaksData)
+importFrom(Spectra,reduceSpectra)
+importFrom(Spectra,spectraData)
+importFrom(crayon,blue)
+importFrom(crayon,cyan)
+importFrom(crayon,green)
+importFrom(crayon,magenta)
+importFrom(crayon,red)
+importFrom(crayon,silver)
+importFrom(crayon,white)
+importFrom(crayon,yellow)
+importFrom(docopt,docopt)
+importFrom(dplyr,join_by)
+importFrom(fs,dir_copy)
+importFrom(fs,dir_create)
+importFrom(fs,file_copy)
+importFrom(fs,path_home)
+importFrom(httr2,req_error)
+importFrom(httr2,req_method)
+importFrom(httr2,req_perform)
+importFrom(httr2,request)
+importFrom(httr2,resp_status_desc)
+importFrom(igraph,V)
+importFrom(igraph,components)
+importFrom(igraph,graph_from_data_frame)
+importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,stream_in)
+importFrom(msentropy,calculate_entropy_similarity)
+importFrom(msentropy,calculate_spectral_entropy)
+importFrom(pak,pak)
+importFrom(pak,pak_cleanup)
+importFrom(pak,pak_update)
+importFrom(pak,pkg_install)
+importFrom(pak,pkg_status)
+importFrom(pbapply,pblapply)
+importFrom(rotl,tax_lineage)
+importFrom(rotl,taxonomy_taxon_info)
+importFrom(rotl,tnrs_match_names)
+importFrom(stats,as.dist)
+importFrom(stats,dist)
+importFrom(stats,setNames)
+importFrom(stringi,stri_detect_fixed)
+importFrom(stringi,stri_detect_regex)
+importFrom(stringi,stri_extract_all_regex)
+importFrom(stringi,stri_length)
+importFrom(stringi,stri_match_all_regex)
+importFrom(stringi,stri_replace_all_fixed)
+importFrom(stringi,stri_replace_all_regex)
+importFrom(stringi,stri_split_regex)
+importFrom(stringi,stri_sub)
+importFrom(tidyfst,col_rn)
+importFrom(tidyfst,rn_col)
+importFrom(tidyfst,set)
+importFrom(tidyfst,setDT)
+importFrom(tidytable,across)
+importFrom(tidytable,add_count)
+importFrom(tidytable,all_of)
+importFrom(tidytable,anti_join)
+importFrom(tidytable,any_of)
+importFrom(tidytable,arrange)
+importFrom(tidytable,as_tidytable)
+importFrom(tidytable,bind_rows)
+importFrom(tidytable,case_when)
+importFrom(tidytable,coalesce)
+importFrom(tidytable,contains)
+importFrom(tidytable,count)
+importFrom(tidytable,dense_rank)
+importFrom(tidytable,desc)
+importFrom(tidytable,distinct)
+importFrom(tidytable,everything)
+importFrom(tidytable,filter)
+importFrom(tidytable,fread)
+importFrom(tidytable,full_join)
+importFrom(tidytable,fwrite)
+importFrom(tidytable,group_by)
+importFrom(tidytable,inner_join)
+importFrom(tidytable,left_join)
+importFrom(tidytable,matches)
+importFrom(tidytable,mutate)
+importFrom(tidytable,mutate_rowwise)
+importFrom(tidytable,n_distinct)
+importFrom(tidytable,na_if)
+importFrom(tidytable,pivot_longer)
+importFrom(tidytable,pivot_wider)
+importFrom(tidytable,reframe)
+importFrom(tidytable,rename)
+importFrom(tidytable,replace_na)
+importFrom(tidytable,right_join)
+importFrom(tidytable,row_number)
+importFrom(tidytable,rowwise)
+importFrom(tidytable,select)
+importFrom(tidytable,separate_rows)
+importFrom(tidytable,slice_sample)
+importFrom(tidytable,tidytable)
+importFrom(tidytable,ungroup)
+importFrom(tidytable,unnest)
+importFrom(tidytable,where)
+importFrom(utils,URLencode)
+importFrom(utils,combn)
+importFrom(utils,download.file)
+importFrom(yaml,read_yaml)
+importFrom(yaml,write_yaml)
