--- a/NAMESPACE
+++ b/NAMESPACE
@@ -148,6 +148,7 @@ importFrom(tidytable,anti_join)
 importFrom(tidytable,any_of)
 importFrom(tidytable,arrange)
 importFrom(tidytable,as_tidytable)
+importFrom(tidytable,bind_cols)
 importFrom(tidytable,bind_rows)
 importFrom(tidytable,case_when)
 importFrom(tidytable,coalesce)
