--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Imports:
     gt (>= 0.11.0),
     httr2 (>= 1.0.2),
     igraph (>= 2.0.3),
+    import (>= 1.3.2),
     installr (>= 0.23.4),
     jsonlite (>= 1.8.8),
     MetaboCoreUtils (>= 1.12.0),
