--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ export(select_sirius_columns_formulas)
 export(select_sirius_columns_structures)
 export(select_sop_columns)
 export(split_tables_sop)
+export(transform_score_sirius_csi)
 export(weight_annotations)
 export(weight_bio)
 export(weight_chemo)
