--- a/inst/params/default/annotate_masses.yaml
+++ b/inst/params/default/annotate_masses.yaml
@@ -213,8 +213,8 @@ ms:
 
     #' For retention time.
     rt:
-      #' Retention time tolerance in minutes. FLOAT
-      minutes: 0.05
+      #' Retention time tolerance for adducts in minutes. FLOAT
+      adducts: 0.02
 
 #' Names of the different variables in the input files.
 names:
