--- a/inst/params/prepare_params_advanced.yaml
+++ b/inst/params/prepare_params_advanced.yaml
@@ -452,8 +452,11 @@ ms:
 
     #' For retention time.
     rt:
-      #' Retention time tolerance in minutes. FLOAT
-      minutes: 0.05
+      #' Retention time tolerance for adducts in minutes. FLOAT
+      adducts: 0.02
+
+      #' Retention time tolerance for library in minutes. FLOAT
+      library: 0.1
 
 #' Names of the different variables in the input files.
 names:
