--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(fake_hmdb)
 export(fake_lotus)
 export(fake_sop_columns)
 export(filter_annotations)
+export(filter_high_confidence_only)
 export(get_example_sirius)
 export(get_file)
 export(get_gnps_tables)
