--- a/inst/params/prepare_params.yaml
+++ b/inst/params/prepare_params.yaml
@@ -30,5 +30,7 @@ organisms:
   #' Example: "Homo sapiens". STRING
   taxon: ~
 options:
+  #' Filter high confidence candidates only. BOOLEAN
+  high_confidence: yes
   #' Do you want to summarize all candidates per feature to a single row? BOOLEAN
   summarise: no
