--- a/NAMESPACE
+++ b/NAMESPACE
@@ -190,5 +190,6 @@ importFrom(tidytable,where)
 importFrom(utils,URLencode)
 importFrom(utils,combn)
 importFrom(utils,download.file)
+importFrom(utils,unzip)
 importFrom(yaml,read_yaml)
 importFrom(yaml,write_yaml)
