--- a/inst/params/default/annotate_spectra.yaml
+++ b/inst/params/default/annotate_spectra.yaml
@@ -28,25 +28,15 @@ files:
   libraries:
     #' Spectral libraries. STRING
     spectral:
-      #' Experimental libraries
-      exp:
-        #' List of negative experimental spectral libraries. STRING
-        neg:
-          - data/interim/libraries/spectra/exp/massbank_neg.rds
+      #' List of negative spectral libraries. STRING
+      neg:
+        - data/interim/libraries/spectra/exp/massbank_neg.rds
+        - data/interim/libraries/spectra/is/lotus_neg.rds
 
-        #' List of positive experimental spectral libraries. STRING
-        pos:
-          - data/interim/libraries/spectra/exp/massbank_pos.rds
-
-      #' In silico libraries
-      is:
-        #' List of negative in silico spectral libraries. STRING
-        neg:
-          - data/interim/libraries/spectra/is/lotus_neg.rds
-
-        #' List of positive in silico spectral libraries. STRING
-        pos:
-          - data/interim/libraries/spectra/is/lotus_pos.rds
+      #' List of positive spectral libraries. STRING
+      pos:
+        - data/interim/libraries/spectra/exp/massbank_pos.rds
+        - data/interim/libraries/spectra/is/lotus_pos.rds
 
   #' Spectral files. STRING
   spectral:
